# interprot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  testing.ipynb
.github/workflows/: gh-pages.yml  run_tests.yml
app/: index.html  package.json
app/src/: App.tsx
app/src/components/: MolstarViewer.tsx  SeqViewer.tsx
interprot/: esm_wrapper.py  sae_model.py  sae_module.py
interprot/autointerp/: README.md  __main__.py  labels2latents.py  pdb2labels.py  run_all.sh
interprot/autointerp/results/l24_plm1280_sae32768_k128_100k/: H{4,40}[TS]{1,12}H{4,40}_mapping.csv
interprot/autointerp/results/labels/: E{3,12}[T]{2,5}E{3,12}_labels.csv  H{4,40}[TS]{1,12}H{4,40}_labels.csv
interprot/logistic_regression_probe/: README.md  __main__.py  all_latents.py  single_latent.py  utils.py
interprot/make_viz_files/: __main__.py
interprot/sae_inference/: README.md  handler.py
interprot/scripts/: run_all_probes.sh
interprot/steer_feature/: README.md  requirements.txt
interprot/tests/logistic_regression_probe/: test_single_latent.py  test_utils.py
plm_interpretability/: data_module.py  esm_wrapper.py  requirements.txt  sae_model.py  sae_module.py  steering.ipynb  training.py  utils.py
plm_interpretability/autointerp/: README.md  __main__.py  labels2latents.py  pdb2class.py  pdb2labels.py  run_all.sh
plm_interpretability/autointerp/results/: alpha_helix_mapping.csv  alpha_helix_mapping_100k.csv  alpha_helix_mappings_211k.csv  beta_hairpin_mapping.csv  beta_hairpin_mapping_211k.csv  beta_hairpin_mappings.csv  beta_sheet_labels.csv  beta_sheet_mapping.csv  beta_sheet_mapping_100k.csv  beta_sheet_mappings_211k.csv  helix_turn_helix_labels.csv  helix_turn_helix_mapping_100k.csv  helix_turn_helix_mappings_211k.csv
plm_interpretability/autointerp/results/l24_plm1280_sae32768_k128_100k/: E{3,12}[T]{2,5}E{3,12}_mapping.csv  alpha_helix_mapping.csv  beta_hairpin_mapping.csv  beta_sheet_mapping.csv  helix_turn_helix_mapping.csv
plm_interpretability/autointerp/results/l24_plm1280_sae4096_k128_100k/: E{3,12}[T]{2,5}E{3,12}_mapping.csv  H{4,40}[TS]{1,12}H{4,40}_mapping.csv  alpha_helix_mapping.csv  beta_hairpin_mapping.csv  beta_sheet_mapping.csv  helix_turn_helix_mapping.csv
plm_interpretability/autointerp/results/l24_plm1280_sae4096_k128_211k/: E{3,12}[T]{2,5}E{3,12}_mapping.csv  H{4,40}[TS]{1,12}H{4,40}_mapping.csv  alpha_helix_mapping.csv  beta_hairpin_mapping.csv  beta_sheet_mapping.csv  helix_turn_helix_mapping.csv
plm_interpretability/autointerp/results/labels/: alpha_helix.csv  beta_hairpin.csv
plm_interpretability/latent_probe/: README  __main__.py
plm_interpretability/latent_probe/results/DNA binding/: H-T-H motif.csv
plm_interpretability/logistic_regression_probe/: README.md  __main__.py  all_latents.py  annotations.py  logging.py  single_latent.py  utils.py
plm_interpretability/make_viz_files/: __main__.py
plm_interpretability/sae_inference/: Dockerfile
plm_interpretability/scripts/: run_all_probes.sh
plm_interpretability/steer_feature/: handler.py
sae/: model.py  utils.py
tests/: test_latent_probe.py
tests/logistic_regression_probe/: test_single_latent.py  test_utils.py
viz/: .gitignore  .prettierignore  .prettierrc  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  vite.config.ts
viz/src/: App.tsx  SAEConfigs.ts  SAEVisualizer.tsx  data.tsx  index.css  main.tsx  utils.tsx  vite-env.d.ts
viz/src/components/: CustomSeqInput.tsx  CustomSeqPlayground.tsx  CustomStructureViewer.tsx  CustomViewer.tsx  ErrorBoundary.tsx  HomeNavigator.tsx  LandingPage.tsx  MolstarMulti.tsx  MolstarSimple.tsx  MolstarViewer.tsx  SeqViewer.tsx
viz/src/components/ui/: input.tsx  sidebar.tsx
