[project]
name = "plm-interpretability"
version = "0.1.0"
description = "Mechanistic interpretability tools for protein language models"
authors = [
    {name = "Etowah Adams", email = "etowahadams@gmail.com"},
    {name = "Liam Bai", email = "liambai2000@gmail.com"}
]
dependencies = [
    "click",
    "transformers",
    "torch>=2.2.0",
    "polars",
    "numpy<2",
    "scikit-learn",
    "tqdm",
    "pandas",
]
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools]
packages = [
    "plm_interpretability",
    "plm_interpretability.autointerp",
    "plm_interpretability.logistic_regression_probe"
]

[project.scripts]
autointerp = "plm_interpretability.autointerp.__main__:cli"
logistic_regression_probe = "plm_interpretability.logistic_regression_probe.__main__:cli"

[project.urls]
Homepage = "https://github.com/etowahadams/plm-interpretability"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.build-meta]
build-editable = "setuptools.build_meta:build_editable"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[project.optional-dependencies]
dev = [
    "pytest",
]
